manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workspaces
---
apiVersion: v1
kind: Pod
metadata:
  name: workspace-bot
  labels:
    app: workspace-bot
spec:
  serviceAccountName: workspace-bot
  containers:
    - name: workspace-bot
      imagePullPolicy: Always
      image: ghcr.io/cscosu/workspace-bot:latest
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workspace-network-policy
spec:
  podSelector:
    matchLabels:
      workspace: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.88.0/24
              - 192.168.0.0/16
              - 172.16.0.0/12
              - 10.0.0.0/8
